# loginserver

./: .gitignore  CMakeLists.txt  init.lua
modules/corelib/: const.lua  corelib.otmod  globals.lua  inputmessage.lua  outputmessage.lua  util.lua
modules/server/: account.lua  protocolgame.lua  protocolgeneric.lua  protocollogin.lua  server.lua  server.otmod
src/: main.cpp
